@@ -31,3 +31,4 @@ Graham Maltby              <gmaltby+l2tpns@iig.com.au>
 Rhys Kidd                  <rhys.kidd@staff.westnet.com.au>
 Muhammad Tayseer Alquoatli <idoit.ief@gmail.com>
 Cyril Elkaim               <cyrelk@users.sourceforge.net>
+Geoffry D. Bennett         <g_bennett@users.sourceforge.net>
