@@ -1,8 +1,12 @@
-* Thu Jan 20 2011 Brendan O'Dea <bod@optus.net> 2.2.x
+* Sun Sep 11 2011 Brendan O'Dea <bod@optus.net> 2.2.x
 - Apply MLPPP patch from Muhammad Tayseer Alquoatli.
 - Apply patch from Michael O to avoid sending multiple CDNs.
 - Apply patch from Cyril Elkaim to fix an issue with MacOS.
 - Apply patch from Geoffrey D. Bennett to fix retry of control packets.
+- Apply patch from Geoffrey D. Bennett to fix handle RADIUS Class attribute.
+- Bump heartbeat version to handle Class entry in session (v6).
+- Re-arrange session struct to remove padding.
+- Update cluster code to handle v6 packets.  Drop compatability for pre-v5.
 
 * Mon Dec 18 2006 Brendan O'Dea <bod@optus.net> 2.2.0
 - Only poll clifd if successfully bound.
